force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/leaseworks__Aircraft_In_Transaction__c.object-meta.xml
<CustomObject>
    <label>Aircraft In Transaction</label>
    <nameField>
        <label>MSN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircraft In Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>