force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Aircraft_In_Transaction_External_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_In_Transaction_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Z_Unused_2012 Aircraft In Transaction ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>