force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Airframe_FH__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Airframe_FH__c</fullName>
    <label>FH Airframe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>