force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__APU_TSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__APU_TSN__c</fullName>
    <label>APU TSLV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>