force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Average_Monthly_Hours_LG_Right__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Average_Monthly_Hours_LG_Right__c</fullName>
    <label>Average Monthly Hours LG Right Wing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>