force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Balloon_Payment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Balloon_Payment__c</fullName>
    <inlineHelpText>Principal Repayment (in $Millions) made in bulk in the last term/month</inlineHelpText>
    <label>Balloon Payment ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>