force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Component_Value_Remaining_Engine_2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Component_Value_Remaining_Engine_2__c</fullName>
    <description>Life Remaining multiplied by Performance Restoration Cost</description>
    <formula>leaseworks__Performance_Restoration_Cost_Engine_2__c *  leaseworks__Life_Remaining_Eng_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Life Remaining multiplied by Performance Restoration Cost</inlineHelpText>
    <label>Component Value Remaining Engine 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>