force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Cycles_Remaining_Engine_1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cycles_Remaining_Engine_1__c</fullName>
    <label>Cycles Remaining Engine 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>