force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Data_as_of_Eng_1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Data_as_of_Eng_1__c</fullName>
    <label>Data As Of</label>
    <type>Date</type>
</CustomField>