force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Debt_Amortization_Payment_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Debt_Amortization_Payment_F__c</fullName>
    <formula>leaseworks__Debt_Amortization_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly loan payments made</inlineHelpText>
    <label>Debt Amortization Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>