force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Debt_Amount_M__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Debt_Amount_M__c</fullName>
    <formula>leaseworks__Price__c -  leaseworks__Equity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Debt Amount in $Million</inlineHelpText>
    <label>Debt Amount ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>