force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Engine_2_Lowest_Limiter_Cycles__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_2_Lowest_Limiter_Cycles__c</fullName>
    <label>Cycles Used Engine 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>