force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Equity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Equity__c</fullName>
    <description>Total equity invested in this deal.</description>
    <inlineHelpText>Equity Amount in $Million</inlineHelpText>
    <label>Equity ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>