force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__FH_FC_Engine_1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FH_FC_Engine_1__c</fullName>
    <label>FH:FC Engine 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>