force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__IRR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IRR__c</fullName>
    <formula>leaseworks__Y_Hidden_IRR__c</formula>
    <inlineHelpText>Annualized Internal Rate of Return</inlineHelpText>
    <label>XIRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>