force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Is_Primary_Timeline__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Is_Primary_Timeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Timeline?</label>
    <type>Checkbox</type>
</CustomField>