force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_End_Date__c</fullName>
    <label>Lease End Date</label>
    <type>Date</type>
</CustomField>