force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Life_Limit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Life_Limit__c</fullName>
    <label>MTBR Hours Engine 1</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>