force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maturity_Date__c</fullName>
    <formula>leaseworks__Aircraft__r.leaseworks__Lease__r.leaseworks__Lease_End_Date_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>