force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__MR_Balance_At_the_end_Of_Lease_M__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Balance_At_the_end_Of_Lease_M__c</fullName>
    <inlineHelpText>MR Balance At the end Of Lease (in $Millions)</inlineHelpText>
    <label>MR Balance At the end Of Lease ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>