force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Net_Equity_M__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Net_Equity_M__c</fullName>
    <description>Base equity net of MR adjustment with UF Fee added to it</description>
    <formula>leaseworks__Equity__c -  leaseworks__Maintenance_Reserve_Adjustment_On_Equity__c + (leaseworks__UF_Fee__c *  leaseworks__Debt_Amount_M__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Base equity net of MR adjustment with UF Fee added to it</inlineHelpText>
    <label>Net Equity ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>