force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Next_Performance_Restoration_Date_Eng_2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Next_Performance_Restoration_Date_Eng_2__c</fullName>
    <formula>leaseworks__Data_as_of_Eng_1__c  +((( leaseworks__Life_Limit_Hours_Eng2__c - leaseworks__Engine_2_TSN__c )/ leaseworks__Engine_2_FH__c )*(365/12))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Perf Restoration Date Engine2</label>
    <type>Date</type>
</CustomField>