force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current operator of the aircraft</description>
    <inlineHelpText>Current operator of the aircraft</inlineHelpText>
    <label>Z_Unused_OP Operator</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Aircraft In Transaction</relationshipLabel>
    <relationshipName>Aircraft_In_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>