force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Performance_Limit_Months_LG_Nose__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Performance_Limit_Months_LG_Nose__c</fullName>
    <label>MTBR (Months) LG Nose</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>