force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Performance_Restoration_Cost_APU__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Performance_Restoration_Cost_APU__c</fullName>
    <label>Performance Restoration Cost APU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>