force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent__c</fullName>
    <description>Current rent associated with the aircraft</description>
    <inlineHelpText>Current rent (in $) associated with the aircraft</inlineHelpText>
    <label>Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>