force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Total_Number_of_Bids__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Number_of_Bids__c</fullName>
    <label>Total Number of Bids</label>
    <summaryForeignKey>leaseworks__Transaction_Terms__c.leaseworks__Aircraft_In_Transaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>