force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__Transaction__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction__c</fullName>
    <label>Transaction</label>
    <referenceTo>leaseworks__Transaction__c</referenceTo>
    <relationshipLabel>Aircraft In Transaction</relationshipLabel>
    <relationshipName>Aircraft_In_Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>