force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/fields/leaseworks__YoM__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__YoM__c</fullName>
    <label>Year Of Manufacture</label>
    <length>4</length>
    <type>Text</type>
</CustomField>