force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/recordTypes/leaseworks__Acquisition.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Acquisition</fullName>
    <active>true</active>
    <description>The Record Type for Acquisition Transactions</description>
    <label>Acquisition</label>
</RecordType>