force-app/main/default/objects/leaseworks__Aircraft_In_Transaction__c/validationRules/leaseworks__EquityPercentageNotGreaterThanHundred.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__EquityPercentageNotGreaterThanHundred</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Equity_Percentage__c  &gt; 1</errorConditionFormula>
    <errorDisplayField>leaseworks__Equity_Percentage__c</errorDisplayField>
    <errorMessage>Equity (%) cannot be greater than 100</errorMessage>
</ValidationRule>